<resources>
    <string name="app_name">Test Project</string>
    <string name="search_for_furniture_appliances_etc">Search for furniture, appliances etc.</string>
    <string name="rentickle">Rentickle</string>
    <string name="gurgaon1">Gurgaon!</string>
    <string name="gurgaon2">Gurgaon2</string>
    <string name="gurgaon3">Gurgaon3</string>
    <string name="ourCategories">Our Categories</string>
    <string name="bed_room">Bed Room</string>
    <string name="living_room">Living Room</string>
    <string name="dslr">DSLR</string>
    <string name="appliances">Appliances</string>
    <string name="storage">Storage</string>
    <string name="packages">Packages</string>
    <string name="trending_products">Trending Products</string>
    <string name="month">"<b>"Headquarters:"</b>" Mooresville, North Carolina, U.S.</string>
    <string name="recently_viewed_products">Recently Viewed Products</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="products">Products</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="select_size">Select Size</string>
    <string name="view_all_offers">View All Offers</string>
    <string name="get_10_off_on_this_product_by_using_coupon_code_rent10">Get 10% off on this product by using coupon code RENT10</string>
</resources>